--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "preinstall": "npx only-allow yarn",
-    "build": "webpack",
-    "serve": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack --config scripts/config/webpack.prod.js",
+    "dev": "cross-env NODE_ENV=development webpack serve --config scripts/config/webpack.dev.js",
     "lint": "npm run lint-eslint",
     "lint-eslint": "eslint -c .eslintrc.js --ext .ts,.tsx,.js,.jsx src",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
@@ -41,6 +41,7 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@types/node": "^17.0.42",
     "conventional-changelog-cli": "^2.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.3",
     "eslint": "^8.17.0",
@@ -52,6 +53,8 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "json5": "^2.2.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "lint-staged": "^13.0.1",
     "only-allow": "^1.1.0",
     "prettier": "^2.6.2",
@@ -60,6 +63,7 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
