--- a/.npmrc
+++ b/.npmrc
@@ -8,3 +8,6 @@ chromedriver_cdnurl=https://npm.taobao.org/mirrors/chromedriver
 phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs
 electron_mirror=https://npm.taobao.org/mirrors/electron/
 fsevents_binary_host_mirror=http://npm.taobao.org/mirrors/fsevents/
+
+sqlite3_binary_host_mirror=https://foxgis.oss-cn-shanghai.aliyuncs.com/
+profiler_binary_host_mirror=https://npm.taobao.org/mirrors/node-inspector/
