--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@types/node": "^17.0.42",
+    "autoprefixer": "^10.4.7",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -57,6 +58,10 @@
     "less-loader": "^11.0.0",
     "lint-staged": "^13.0.1",
     "only-allow": "^1.1.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^7.0.0",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.7.1",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
     "toml": "^3.0.0",
