--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
   },
   "author": "bystander",
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@types/node": "^17.0.42",
     "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -49,7 +53,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-unicorn": "^42.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
@@ -57,6 +60,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "lint-staged": "^13.0.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "only-allow": "^1.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.0.0",
@@ -64,6 +68,7 @@
     "postcss-preset-env": "^7.7.1",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
+    "thread-loader": "^3.0.4",
     "toml": "^3.0.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
@@ -72,5 +77,10 @@
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
+  }
 }
