生产环境去除console

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "csv-loader": "^3.0.3",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
@@ -50,6 +51,7 @@
     "postcss-preset-env": "^7.7.1",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.3",
     "thread-loader": "^3.0.4",
     "toml": "^3.0.0",
     "webpack": "^5.73.0",
