--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^17.0.42",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "babel-plugin-import": "^1.13.5",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -62,9 +63,11 @@
     "yamljs": "^0.3.0"
   },
   "dependencies": {
+    "antd": "^4.21.2",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "6"
   }
 }
