--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
     "@types/node": "^17.0.42",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "babel-plugin-import": "^1.13.5",
+    "chalk": "4",
     "conventional-changelog-cli": "^2.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
@@ -39,7 +41,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "json5": "^2.2.1",
     "less": "^4.1.3",
@@ -59,6 +60,7 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.2",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
