--- a/package.json
+++ b/package.json
@@ -66,12 +66,16 @@
   },
   "dependencies": {
     "antd": "^4.21.2",
+    "axios": "^0.27.2",
     "echarts": "^5.3.3",
+    "express": "^4.18.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1"
   }
 }
